<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Todozy</string>
    <string name="msg_invalid_date_time">The selected date/time is invalid</string>
    <string name="edit_task">Edit Task</string>
    <string name="new_task">New Task</string>
    <string name="add_alarm">ADD ALARM</string>
    <string name="menu_save">SAVE</string>
    <string name="no_tasks">No tasks found</string>
    <string name="next_days">Next days</string>
    <string name="label_task">Task</string>
    <string name="label_notes">Notes</string>
    <string name="done">DONE</string>
    <string name="repeat_alarm">Repeat alarm</string>
    <string name="task_done">Task done</string>
    <string name="task_not_done">Task not done</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="previous_days">Previous days</string>
    <string name="mark_as_done">Mark as done</string>
    <string name="mark_as_not_done">Mark as not done</string>
    <string name="clear_history">Clear history</string>
    <string name="clear">Clear</string>
    <string name="cancel">Cancel</string>
    <string name="msg_ask_clear_history_keep">Do you really want to clear the entire history but keep the amount of tasks done and not
        done?</string>
    <string name="msg_ask_clear_all_history">Do you really want to clear the entire history?</string>
    <string name="no_history_found">No history found</string>
    <string name="projects">Projects</string>
    <string name="notifications">Notifications</string>
    <string name="notification_tone">Notification tone</string>
    <string name="vibrate">Vibrate</string>
    <string name="tip">Tip</string>
    <string name="got_it">GOT IT</string>
    <string name="swipe_right">Swipe right to mark a task as done</string>
    <string name="swipe_left">Swipe left to mark a task as not done</string>
    <string name="exception_task_name">You must enter a task name</string>
    <string name="project">Project</string>
    <string name="edit_project">Edit Project</string>
    <string name="new_project">New Project</string>
    <string name="add_deadline">ADD DEADLINE</string>
    <string name="exception_project_name">You must enter the project name</string>
    <string name="project_details">Project Details</string>
    <string name="project_color">Project color</string>
    <string name="what_accomplish">What do you want to accomplish?</string>
    <string name="what_you_want_to_do">What do you want to do?</string>
    <string name="what_are_details_task">What are the details of this task?</string>
    <string name="what_details_project">What are the details of this project?</string>
    <string name="tasks_to_do">tasks to do</string>
    <string name="touch_to_check">Touch to check</string>
    <string name="task_details">Task Details</string>
    <string name="deadline">Deadline</string>
    <string name="alarm">ALARM</string>
    <string name="custom_alarm">Custom Alarm</string>
    <string name="clear_all_history">Clear all history</string>
    <string name="clear_history_but_keep">Clear history but keep the amount of tasks done and not done</string>
    <string name="filter_history">Filter history</string>
    <string name="app_full_name"><![CDATA[Todozy - Tasks & Habits]]></string>
    <string name="app_description">Todozy is a minimalist task management app that helps you to be more productive and build new habits.</string>
    <string name="ept_list_no_projects_found">No projects found</string>
    <string name="label_tasks">Tasks</string>
    <string name="progress">Progress</string>
    <string name="msg_deadline_must_be_greater">Deadline must be greater than the initial date</string>
    <string name="tasks_done">Tasks done</string>
    <string name="tasks_not_done">Tasks not done</string>
    <string name="filter_status">Filter Status</string>
    <string name="history_details">History Details</string>

    <string name="msg_error">An error occurred while performing the operation</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="pattern_month_day_short">MMM dd</string>
    <string name="pattern_month_day_long">MMMM dd</string>
    <string name="delete">Delete</string>
    <string name="save">SAVE</string>
    <string name="default_string">---</string>
    <string name="error_list">An error occurred while loading the list</string>
    <string name="not_repeat">Not repeat</string>
    <string name="every_second">Every second</string>
    <string name="every_minute">Every minute</string>
    <string name="every_hour">Every hour</string>
    <string name="every_day">Every day</string>
    <string name="every_week">Every week</string>
    <string name="every_month">Every month</string>
    <string name="every_year">Every year</string>
    <string name="custom">Custom</string>
    <string name="no_records_found">No records found</string>
    <string name="yesterday">Yesterday</string>
    <string name="notes">Notes</string>
    <string name="about">About</string>
    <string name="info">Info</string>
    <string name="developed_by">Developed by</string>
    <string name="version">Version</string>
    <string name="items">items</string>
    <string name="item">item</string>
    <string name="no_items_selected">0 items</string>
    <string name="search">Search</string>
    <string name="initial_date">Initial Date</string>
    <string name="final_date">Final Date</string>
    <string name="filter_by_date">Filter by date</string>
    <string name="filter">Filter</string>
    <string name="ept_click_to_add">Click the + button to add</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="no_filter">No filter</string>
    <string name="last_7_days">Last 7 days</string>
    <string name="last_30_days">Last 30 days</string>
    <string name="date_range">Date range</string>
    <string name="and">and</string>
    <string name="none">None</string>
    <string name="label_description">DESCRIPTION</string>
    <string name="year">year</string>
    <string name="years">years</string>
    <string name="month">month</string>
    <string name="months">months</string>
    <string name="week">week</string>
    <string name="weeks">weeks</string>
    <string name="day">day</string>
    <string name="days">days</string>
    <string name="hour">hour</string>
    <string name="hours">hours</string>
    <string name="minute">minute</string>
    <string name="minutes">minutes</string>
    <string name="second">second</string>
    <string name="seconds">seconds</string>
    <string name="label_date">Date</string>
    <string name="label_time">Time</string>
    <string name="label_repeat">Repeat</string>
    <string name="label_starting_date">Starting Date</string>
    <string name="label_countdown">Countdown</string>
    <string name="msg_data_cant_be_greater">The date can not be greater than today</string>
    <string name="msg_end_date">The end date can not be less than the starting date</string>
    <string name="label_status">Status</string>
    <string name="label_date_time">Date/Time</string>
    <string name="restore">Restore</string>
    <string name="label_name">Name</string>
    <string name="label_quantity">Quantity</string>
    <string name="hint_enter_product_name">Enter the product name</string>
    <string name="hint_enter_current_quantity">Enter the current quantity</string>
    <string name="msg_exception_start_editing">An error occurred when start editing. Try again</string>
    <string name="title_edit_product">Edit Product</string>
    <string name="title_new_product">New Product</string>
    <string name="msg_exception_saving">An error occurred while saving. Please, try again</string>
    <string name="product_added">Product added!</string>
    <string name="exception_product_name">You must enter a product name</string>
    <string name="exception_product_quantity">You must enter the quantity</string>
    <string name="apply">Apply</string>
    <string name="notification_title_task_alarms">Task alarms</string>
</resources>
