<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/alarm__ll__options"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/alarm__ll__date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:minHeight="52dp"
        android:orientation="vertical">

        <TextView
            style="@style/TextViewLabel"
            android:paddingLeft="8dp"
            android:paddingTop="4dp"
            android:text="@string/label_date" />

        <TextView
            android:id="@+id/alarm__tv__date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingBottom="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="16dp"
            android:textColor="@color/md_blue_grey_500"
            android:textSize="@dimen/text_size_small"
            tools:text="@string/today" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/alarm__ll__time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:minHeight="52dp"
        android:orientation="vertical">

        <TextView
            style="@style/TextViewLabel"
            android:paddingLeft="8dp"
            android:paddingTop="4dp"
            android:text="@string/label_time" />

        <TextView
            android:id="@+id/alarm__tv__time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingBottom="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="16dp"
            android:textColor="@color/md_blue_grey_500"
            android:textSize="@dimen/text_size_small"
            tools:text="15:30" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/alarm__ll__repeat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:minHeight="52dp"
        android:orientation="vertical">

        <TextView
            style="@style/TextViewLabel"
            android:paddingLeft="8dp"
            android:paddingTop="4dp"
            android:text="@string/label_repeat" />

        <TextView
            android:id="@+id/alarm__tv__repeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingBottom="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="16dp"
            android:textColor="@color/md_blue_grey_500"
            android:textSize="@dimen/text_size_small"
            tools:text="Every day" />

    </LinearLayout>

</LinearLayout>