<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/dialog_repeate_alarm__tv__titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:text="@string/tip"
        android:textColor="@android:color/black"
        android:textSize="22sp"
        android:textStyle="bold" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginLeft="24dp"
            android:padding="8dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/md_teal_300"
            android:background="@drawable/shape_circle"
            android:src="@drawable/ic_swipe_right_white_48dpx74dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/swipe_right"
            android:paddingLeft="16dp"
            android:paddingTop="10dp"
            android:paddingRight="24dp"
            android:layout_marginLeft="88dp"
            android:textColor="@color/md_blue_500"
            android:textSize="18sp" />


    </FrameLayout>

    <FrameLayout
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginLeft="24dp"
            android:padding="8dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/md_red_300"
            android:background="@drawable/shape_circle"
            android:src="@drawable/ic_swipe_left_white_48dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingTop="10dp"
            android:paddingRight="24dp"
            android:text="@string/swipe_left"
            android:layout_marginLeft="88dp"
            android:textColor="@color/md_blue_500"
            android:textSize="18sp" />


    </FrameLayout>

</LinearLayout>