<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:background="@color/default_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/appbar" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="16dp"
                    android:orientation="vertical"
                    app:cardBackgroundColor="@android:color/white"
                    app:cardCornerRadius="2dp">

                    <TextView
                        style="@style/TextViewLabel"
                        android:paddingLeft="8dp"
                        android:paddingTop="4dp"
                        android:text="@string/project" />

                    <EditText
                        android:id="@+id/frag_insert_project__et__name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="@string/what_accomplish"
                        android:inputType="textCapSentences|textMultiLine"
                        android:maxLength="250"
                        android:minHeight="48dp"
                        android:paddingBottom="8dp"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:paddingTop="24dp"
                        android:textColor="@color/md_blue_grey_700"
                        android:textColorHint="@color/md_blue_grey_200"
                        android:textSize="@dimen/text_size_medium" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/frag_insert_project__card__add_deadline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="8dp"
                    app:cardCornerRadius="2dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/white"
                        android:orientation="vertical">

                        <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/md_blue_300">

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="?selectableItemBackground">

                                <ImageView
                                    android:id="@+id/diamond_left_deadline"
                                    android:layout_width="12dp"
                                    android:layout_height="12dp"
                                    android:layout_alignParentLeft="true"
                                    android:layout_centerInParent="true"
                                    android:layout_marginLeft="8dp"
                                    android:layout_marginRight="8dp"
                                    android:tint="@color/md_white_1000"
                                    app:srcCompat="@drawable/ic_diamond_white_24dp" />

                                <ImageView
                                    android:id="@+id/diamond_right_deadline"
                                    android:layout_width="12dp"
                                    android:layout_height="12dp"
                                    android:layout_alignParentRight="true"
                                    android:layout_centerInParent="true"
                                    android:layout_marginLeft="8dp"
                                    android:layout_marginRight="8dp"
                                    android:tint="@color/md_white_1000"
                                    app:srcCompat="@drawable/ic_diamond_white_24dp" />

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="48dp"
                                    android:layout_toLeftOf="@id/diamond_right_deadline"
                                    android:layout_toRightOf="@id/diamond_left_deadline"
                                    android:fontFamily="sans-serif-medium"
                                    android:gravity="center"
                                    android:text="@string/add_deadline"
                                    android:textAllCaps="true"
                                    android:textColor="@android:color/white"
                                    android:textSize="@dimen/text_size_xsmall" />

                            </RelativeLayout>

                        </FrameLayout>

                        <LinearLayout
                            android:id="@+id/frag_insert_project__ll__deadlineviews"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <LinearLayout
                                android:id="@+id/frag_insert_project__ll__initial_date"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="?attr/selectableItemBackground"
                                android:minHeight="54dp"
                                android:orientation="vertical">

                                <TextView
                                    style="@style/TextViewLabel"
                                    android:paddingLeft="8dp"
                                    android:paddingTop="4dp"
                                    android:text="@string/label_starting_date" />

                                <TextView
                                    android:id="@+id/frag_insert_project__tv__initial_date"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:gravity="center_vertical"
                                    android:paddingBottom="8dp"
                                    android:paddingLeft="8dp"
                                    android:paddingRight="16dp"
                                    tools:text="@string/today"
                                    android:textColor="@color/md_blue_grey_500"
                                    android:textSize="@dimen/text_size_small" />

                            </LinearLayout>

                            <LinearLayout
                                android:id="@+id/frag_insert_project__ll__deadline"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="?attr/selectableItemBackground"
                                android:minHeight="54dp"
                                android:orientation="vertical">

                                <TextView
                                    style="@style/TextViewLabel"
                                    android:paddingLeft="8dp"
                                    android:paddingTop="4dp"
                                    android:text="@string/deadline" />

                                <TextView
                                    android:id="@+id/frag_insert_project__tv__deadline"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:gravity="center_vertical"
                                    android:paddingBottom="8dp"
                                    android:paddingLeft="8dp"
                                    android:paddingRight="16dp"
                                    tools:text="@string/today"
                                    android:textColor="@color/md_blue_grey_500"
                                    android:textSize="@dimen/text_size_small" />

                            </LinearLayout>

                        </LinearLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="8dp"
                    android:orientation="vertical"
                    app:cardBackgroundColor="@android:color/white"
                    app:cardCornerRadius="2dp">

                    <TextView
                        style="@style/TextViewLabel"
                        android:paddingLeft="8dp"
                        android:paddingTop="4dp"
                        android:text="@string/label_notes" />

                    <EditText
                        android:id="@+id/frag_insert_project__et__notes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="@string/what_details_project"
                        android:inputType="textCapSentences|textMultiLine"
                        android:maxLength="400"
                        android:minHeight="48dp"
                        android:paddingBottom="8dp"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:paddingTop="24dp"
                        android:textColor="@color/md_blue_grey_700"
                        android:textColorHint="@color/md_blue_grey_200"
                        android:textSize="@dimen/text_size_medium" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="100dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="8dp"
                    app:cardCornerRadius="2dp">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/recycler"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@android:color/transparent"
                            android:clipToPadding="false"
                            android:nestedScrollingEnabled="false"
                            android:paddingTop="20dp"
                            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

                        <TextView
                            style="@style/TextViewLabel"
                            android:paddingLeft="8dp"
                            android:paddingTop="4dp"
                            android:text="@string/label_tasks" />

                        <include layout="@layout/ept_view" />

                    </FrameLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

    <include layout="@layout/fab" />

</FrameLayout>